--- a/dashboard-keys/templates/index.html
+++ b/dashboard-keys/templates/index.html
@@ -12,10 +12,10 @@
   <div class="max-w-5xl mx-auto">
     <h1 class="text-3xl font-bold mb-6 text-center">🔐 Generador de Claves</h1>
 
-    <div class="flex gap-2 mb-6 flex-wrap">
-      <input type="text" id="nombreInput" style="color: #1d1d1b;" placeholder="Nombre del cliente" class="flex-grow p-2 rounded border" required />
-      <input type="email" id="gmailInput" style="color: #1d1d1b;" placeholder="Gmail" class="flex-grow p-2 rounded border" required />
-      <input type="tel" id="phoneInput" style="color: #1d1d1b;" placeholder="Número teléfono" class="flex-grow p-2 rounded border" required />
+    <div class="flex gap-2 mb-6 flex-wrap" style="color: #1d1d1b;">
+      <input type="text" id="nombreInput" placeholder="Nombre del cliente" class="flex-grow p-2 rounded border" required />
+      <input type="email" id="gmailInput" placeholder="Gmail" class="flex-grow p-2 rounded border" required />
+      <input type="tel" id="phoneInput" placeholder="Número teléfono" class="flex-grow p-2 rounded border" required />
       <button onclick="generarClave()" class="btn btn-danger text-white px-6 py-2 rounded whitespace-nowrap">Generar clave</button>
     </div>
 
